--- a/AVStack.IdentityServer.WebApi/Views/Account/Login.cshtml
+++ b/AVStack.IdentityServer.WebApi/Views/Account/Login.cshtml
@@ -3,11 +3,7 @@
 
 
 <div class="login-page">
-    @* <div class="lead"> *@
-    @*     <h1>Login</h1> *@
-    @*     <p>Choose how to login</p> *@
-    @* </div> *@
-
+    
     <partial name="_ValidationSummary" />
     
     <div class="row justify-content-center">
@@ -33,18 +29,17 @@
                                     <input asp-for="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
                                     <label asp-for="Password" for="floatingPassword">Password</label>
                                 </div>
-                                <div class="form-check p-2">
-                                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" asp-for="RememberLogin">
-                                  <label class="form-check-label" for="flexCheckDefault" asp-for="RememberLogin">
-                                    Remember me
-                                  </label>
-                                </div>
-                                <div class="row p-2 justify-content-between">
+                                <div class="row pt-2 px-2 justify-content-between">
                                     <div class="col">
-                                        <a class="text-pimary" asp-action="ForgotPassword" asp-controller="Account">Forgot password?</a>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" checked="@Model.RememberLogin" id="flexCheckDefault" asp-for="RememberLogin">
+                                            <label class="form-check-label" for="flexCheckDefault" asp-for="RememberLogin">
+                                                Remember me
+                                            </label>
+                                        </div>
                                     </div>
                                     <div class="col text-end">
-                                        <a href="/Account/Register" class="text-pimary">Create account</a>
+                                        <a class="text-primary" asp-action="ForgotPassword" asp-controller="Account">Forgot password?</a>
                                     </div>
                                 </div>
                                 <div class="row gy-1 p-3">
@@ -52,6 +47,12 @@
                                     <button class="btn btn-light" name="button" value="cancel">Cancel</button>
                                 </div>
                             </form>
+                            <div class="row">
+                                <div class="col">
+                                    <a href="/Account/Register" class="text-primary">Create account</a>
+                                </div>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
